RESOLVED FIXED77558
Web Inspector: pause on uncaugh exceptions state is not properly restored
https://bugs.webkit.org/show_bug.cgi?id=77558
Summary Web Inspector: pause on uncaugh exceptions state is not properly restored
Yury Semikhatsky
Reported 2012-02-01 09:16:00 PST
1. Enable pause on all exceptions. 2. Reopen front-end. See 'pause on all exceptions' button state is restored. 3. Navigate to another page with an exception. Result: exception is ignored.
Attachments
Patch (4.72 KB, patch)
2012-02-02 00:25 PST, Yury Semikhatsky
vsevik: review+
Yury Semikhatsky
Comment 1 2012-02-02 00:25:30 PST
Yury Semikhatsky
Comment 2 2012-02-02 01:13:15 PST
Note You need to log in before you can comment on or make changes to this bug.