Web Inspector: pause on uncaugh exceptions state is not properly restored https://bugs.webkit.org/show_bug.cgi?id=77558

'Pause on exceptions' state is now stored in InspectorState object so that it is
properly restored on inspected process change.

Reviewed by Vsevolod Vlasov.

* inspector/InspectorDebuggerAgent.cpp:
(DebuggerAgentState):
(WebCore::InspectorDebuggerAgent::InspectorDebuggerAgent):
(WebCore::InspectorDebuggerAgent::disable):
(WebCore::InspectorDebuggerAgent::restore):
(WebCore::InspectorDebuggerAgent::setPauseOnExceptions):
(WebCore):
(WebCore::InspectorDebuggerAgent::setPauseOnExceptionsImpl):
* inspector/InspectorDebuggerAgent.h:
(InspectorDebuggerAgent):

Canonical link: https://commits.webkit.org/94485@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106541 268f45cc-cd09-0410-ab3c-d52691b4dbfc